crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__dispatch_meta_call.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
unsafe impl qtbridge::qtbridge_runtime::DispatchMetaCall for SomeStruct {
    unsafe fn invoke_slot(&self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
        use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
        match slot_id {
            1u32 => self.slot_one(),
            2u32 => {
                let arg_0_ref = unsafe {
                    inputs[0usize]
                        .cast::<<String as QMetaTypeCompatible>::CompatibleType>()
                        .as_ref()
                }
                .expect("Argument reference is null");
                let arg_0_var = <String as QMetaTypeCompatible>::from_compatible(arg_0_ref);
                self.slot_two(arg_0_var)
            }
            _ => panic!("Unhandled slot id {slot_id}"),
        }
    }
    unsafe fn invoke_slot_mut(&mut self, slot_id: u32, inputs: &[*const u8], outputs: &[*mut u8]) {
        use qtbridge::qtbridge_runtime::QMetaTypeCompatible;
        match slot_id {
            3u32 => self.slot_mut_three(),
            4u32 => self.slot_mut_four(),
            _ => panic!("Unhandled slot id {slot_id}"),
        }
    }
    unsafe fn read_property(&self, prop_id: u32) -> qtbridge::qtbridge_type_lib::QVariant {
        #[allow(unused_imports)]
        use qtbridge::qtbridge_runtime::QPropertyMember;
        match prop_id {
            1u32 => unsafe { (&self.first_value).to_qvariant_view(self, Self::this_value_changed) },
            2u32 => unsafe { (&self.second_value).to_qvariant(self) },
            3u32 => unsafe { (&self.third_value).to_qvariant(self) },
            _ => panic!("Unhandled property id {prop_id}"),
        }
    }
    unsafe fn write_property(
        &mut self,
        prop_id: u32,
        value: &qtbridge::qtbridge_type_lib::QVariant,
    ) {
        #[allow(unused_imports)]
        use qtbridge::qtbridge_runtime::QPropertyMember;
        match prop_id {
            1u32 => {
                let Some(value) = (unsafe { QPropertyMember::from_qvariant(value) }) else {
                    panic!(
                        "Failed to convert QVariant for qproperty '{}'",
                        "this_value"
                    );
                };
                if !QPropertyMember::property_eq(&self.first_value, &value) {
                    self.first_value = value;
                    self.this_value_changed();
                }
            }
            2u32 => {
                let Some(value) = (unsafe { QPropertyMember::from_qvariant(value) }) else {
                    panic!(
                        "Failed to convert QVariant for qproperty '{}'",
                        "otherValue"
                    );
                };
                if !QPropertyMember::property_eq(&self.second_value, &value) {
                    self.second_value = value;
                }
            }
            3u32 => {
                let Some(value) = (unsafe { QPropertyMember::from_qvariant(value) }) else {
                    panic!(
                        "Failed to convert QVariant for qproperty '{}'",
                        "thirdValue"
                    );
                };
                if !QPropertyMember::property_eq(&self.third_value, &value) {
                    self.third_value = value;
                }
            }
            _ => panic!("Unhandled property id {prop_id}"),
        }
    }
}
