crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__test.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
impl qtbridge::qtbridge_runtime::QMetaInfo for SomeStruct {
    type CppProxy = qtbridge::qtbridge_interfaces::qobject::QObjectProxyCpp;
    fn build_dynamic_meta_type(
        mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
    ) {
        use qtbridge::qtbridge_runtime::{QMetaCallArg, QMetaTypeGet, QPropertyMember};
        use qtbridge::qtbridge_type_lib;
        use qtbridge_type_lib::QMetaType;
        meta_obj.as_mut().register_signal(
            "thisValueChanged",
            &[<String as QMetaCallArg>::wire_metatype()],
        );
        meta_obj.as_mut().register_signal(
            "other_value_changed",
            &[<f32 as QMetaCallArg>::wire_metatype()],
        );
        meta_obj.as_mut().register_signal(
            "this_string_value_changed_by_ref",
            &[<String as QMetaCallArg>::wire_metatype()],
        );
        meta_obj.as_mut().register_signal(
            "that_string_value_changed_by_value",
            &[<String as QMetaCallArg>::wire_metatype()],
        );
        meta_obj.as_mut().register_slot(
            "onThatValueChanged",
            1u32,
            &[<String as QMetaCallArg>::wire_metatype()],
            &qtbridge::qtbridge_type_lib::QMetaType::default(),
            qtbridge::qtbridge_runtime::dynamicmetaobjectbuilder::Mutability::Mutable,
        );
        meta_obj.as_mut().register_property(
            "this_value",
            1u32,
            &(<String as QPropertyMember>::qmetatype()),
            false,
            "thisValueChanged",
        );
        meta_obj
            .as_mut()
            .add_class_info("DefaultProperty", "this_value");
        meta_obj.as_mut().register_property(
            "otherValue",
            2u32,
            &(qtbridge::qtbridge_runtime::get_meta_type_of_fn_return_value(|this: &Self| {
                &this.otherValueVar
            })),
            false,
            "other_value_changed",
        );
        meta_obj.as_mut().add_class_info("Author", "The Qt Company");
        meta_obj.as_mut().end_meta_registration();
    }
    fn get_shared_dynamic_meta_object_data(
    ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectData {
        use std::sync::OnceLock;
        thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectData > = OnceLock :: new () ; }
        DYNAMIC_META_OBJECT.with(|cell| {
            *cell.get_or_init(|| {
                let ptr = Self::create_dynamic_meta_object_data_for_type();
                unsafe { ptr.as_ref() }.unwrap()
            })
        })
    }
    fn get_qmetatype() -> qtbridge::qtbridge_type_lib::QMetaType {
        use std::sync::OnceLock;
        static META_TYPE_INTERFACE: OnceLock<qtbridge::qtbridge_type_lib::QMetaTypeInterface> =
            OnceLock::new();
        let iface = META_TYPE_INTERFACE.get_or_init(
            qtbridge::qtbridge_runtime::qmetatypeforqobject::init_interface_for::<Self>,
        );
        qtbridge::qtbridge_type_lib::QMetaType::new_with_interface(iface as *const _)
    }
}
